--- a/README
+++ b/README
@@ -2,6 +2,8 @@
 
 Tested on Ubuntu 18.04.4 LTS
 
+<img src="screenshot/Screenshot.png" />
+
 ## Requirements
 
 ld (sudo apt-get install build-essential)
